update for public release

--- a/humanlabel/humanlabel_public/compute_human_correlation.ipynb
+++ b/humanlabel/humanlabel_public/compute_human_correlation.ipynb
@@ -13,7 +13,15 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-03-17T04:15:11.553833Z",
+     "iopub.status.busy": "2021-03-17T04:15:11.553214Z",
+     "iopub.status.idle": "2021-03-17T04:15:11.971964Z",
+     "shell.execute_reply": "2021-03-17T04:15:11.971239Z",
+     "shell.execute_reply.started": "2021-03-17T04:15:11.553758Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -25,14 +33,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-03-17T04:19:15.744452Z",
+     "iopub.status.busy": "2021-03-17T04:19:15.743820Z",
+     "iopub.status.idle": "2021-03-17T04:19:15.780127Z",
+     "shell.execute_reply": "2021-03-17T04:19:15.778797Z",
+     "shell.execute_reply.started": "2021-03-17T04:19:15.744377Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "# df_result = pd.read_csv('results_v1_201911141704_final.csv')\n",
-    "# df_triplet = pd.read_csv('triplets_v1_201911102026.csv')\n",
-    "df_result = pd.read_csv('results_v2_202003050303.csv')\n",
-    "df_triplet = pd.read_csv('triplets_v2.csv')\n",
+    "df_result = pd.read_csv('anon_results.csv')\n",
+    "df_result.index.name = 'id'\n",
+    "df_result = df_result.reset_index()#.rename(columns={df_result.index.name: 'id'})\n",
+    "df_triplet = pd.read_csv('triplets.csv')\n",
     "df_triplet = df_triplet.set_index('triplet_id')"
    ]
   },
@@ -45,59 +61,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-03-17T04:19:18.166269Z",
+     "iopub.status.busy": "2021-03-17T04:19:18.165691Z",
+     "iopub.status.idle": "2021-03-17T04:19:18.192162Z",
+     "shell.execute_reply": "2021-03-17T04:19:18.190838Z",
+     "shell.execute_reply.started": "2021-03-17T04:19:18.166196Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
        "user_id\n",
-       "cjhan                    1753\n",
-       "epsilon.kim              1618\n",
-       "erin122                  1518\n",
-       "wookee3                  1239\n",
-       "edwin.kang               1029\n",
-       ".                        1007\n",
-       "woong.ssang               604\n",
-       "kloud.on                  407\n",
-       "JRW                       190\n",
-       "yoomin618                 188\n",
-       "hexa.ai                   170\n",
-       "yang.kim                  109\n",
-       "jason.mun                 100\n",
-       "jinhyun.b                  88\n",
-       "chico2121                  86\n",
-       "IceAmericano               72\n",
-       "LSW                        68\n",
-       "eunjin                     67\n",
-       "hyunji                     46\n",
-       "Julyeon Seo                45\n",
-       "cnuh                       40\n",
-       "yejun                      37\n",
-       "Dray.Choe                  35\n",
-       "Jinyeong                   35\n",
-       "jihoon.lee                 34\n",
-       "hihello2                   21\n",
-       "robert.p                   20\n",
-       "Jonggwon                   14\n",
-       "jay.mini                   11\n",
-       "eos73                       9\n",
-       "sungbin.lim                 8\n",
-       "testa                       8\n",
-       "motherfathergentleman       7\n",
-       "hihello                     6\n",
-       "ian.theman                  5\n",
-       "junojuno                    5\n",
-       "scarlett.heo                3\n",
-       "hans                        3\n",
-       "dhkwak                      2\n",
-       "june.one                    2\n",
-       "kwon.g                      2\n",
-       "john.dublin                 1\n",
+       "user_5     1753\n",
+       "user_8     1618\n",
+       "user_1     1518\n",
+       "user_0     1239\n",
+       "user_22    1029\n",
+       "user_38    1007\n",
+       "user_15     604\n",
+       "user_37     407\n",
+       "user_19     190\n",
+       "user_34     188\n",
+       "user_16     170\n",
+       "user_40     109\n",
+       "user_41     100\n",
+       "user_35      88\n",
+       "user_25      86\n",
+       "user_6       72\n",
+       "user_2       68\n",
+       "user_9       67\n",
+       "user_4       46\n",
+       "user_7       45\n",
+       "user_3       40\n",
+       "user_20      37\n",
+       "user_18      35\n",
+       "user_11      35\n",
+       "user_28      34\n",
+       "user_24      21\n",
+       "user_13      20\n",
+       "user_26      14\n",
+       "user_30      11\n",
+       "user_36       9\n",
+       "user_39       8\n",
+       "user_21       8\n",
+       "user_32       7\n",
+       "user_23       6\n",
+       "user_10       5\n",
+       "user_27       5\n",
+       "user_33       3\n",
+       "user_12       3\n",
+       "user_29       2\n",
+       "user_17       2\n",
+       "user_31       2\n",
+       "user_14       1\n",
        "Name: id, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,14 +133,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-03-17T04:19:26.566797Z",
+     "iopub.status.busy": "2021-03-17T04:19:26.566180Z",
+     "iopub.status.idle": "2021-03-17T04:19:26.588312Z",
+     "shell.execute_reply": "2021-03-17T04:19:26.586923Z",
+     "shell.execute_reply.started": "2021-03-17T04:19:26.566722Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['.', 'Dray.Choe', 'IceAmericano', 'JRW', 'Jinyeong', 'Jonggwon', 'Julyeon Seo', 'LSW', 'chico2121', 'cjhan', 'cnuh', 'edwin.kang', 'epsilon.kim', 'erin122', 'eunjin', 'hexa.ai', 'hihello2', 'hyunji', 'jason.mun', 'jay.mini', 'jihoon.lee', 'jinhyun.b', 'kloud.on', 'robert.p', 'wookee3', 'woong.ssang', 'yang.kim', 'yejun', 'yoomin618']\n",
+      "['user_0', 'user_1', 'user_11', 'user_13', 'user_15', 'user_16', 'user_18', 'user_19', 'user_2', 'user_20', 'user_22', 'user_24', 'user_25', 'user_26', 'user_28', 'user_3', 'user_30', 'user_34', 'user_35', 'user_37', 'user_38', 'user_4', 'user_40', 'user_41', 'user_5', 'user_6', 'user_7', 'user_8', 'user_9']\n",
       "29\n"
      ]
     }
@@ -132,8 +164,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-03-17T04:19:34.399172Z",
+     "iopub.status.busy": "2021-03-17T04:19:34.398556Z",
+     "iopub.status.idle": "2021-03-17T04:19:34.409100Z",
+     "shell.execute_reply": "2021-03-17T04:19:34.407734Z",
+     "shell.execute_reply.started": "2021-03-17T04:19:34.399097Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -141,7 +181,7 @@
        "1752"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,8 +243,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-03-17T04:19:38.406966Z",
+     "iopub.status.busy": "2021-03-17T04:19:38.406368Z",
+     "iopub.status.idle": "2021-03-17T04:19:38.479484Z",
+     "shell.execute_reply": "2021-03-17T04:19:38.478493Z",
+     "shell.execute_reply.started": "2021-03-17T04:19:38.406891Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -244,7 +292,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>5.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -252,7 +300,7 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>0.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>0.0</td>\n",
@@ -260,7 +308,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>9</td>\n",
+       "      <th>9</th>\n",
        "      <td>7.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -268,7 +316,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>14</td>\n",
+       "      <th>14</th>\n",
        "      <td>5.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -276,7 +324,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>15</td>\n",
+       "      <th>15</th>\n",
        "      <td>4.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
@@ -297,7 +345,7 @@
        "15          4.0  1.0   1.0      0.0  1.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,42 +361,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-03-17T04:19:42.124222Z",
+     "iopub.status.busy": "2021-03-17T04:19:42.123598Z",
+     "iopub.status.idle": "2021-03-17T04:19:45.383627Z",
+     "shell.execute_reply": "2021-03-17T04:19:45.382270Z",
+     "shell.execute_reply.started": "2021-03-17T04:19:42.124147Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".\n",
-      "Dray.Choe\n",
-      "IceAmericano\n",
-      "JRW\n",
-      "Jinyeong\n",
-      "Jonggwon\n",
-      "Julyeon Seo\n",
-      "LSW\n",
-      "chico2121\n",
-      "cjhan\n",
-      "cnuh\n",
-      "edwin.kang\n",
-      "epsilon.kim\n",
-      "erin122\n",
-      "eunjin\n",
-      "hexa.ai\n",
-      "hihello2\n",
-      "hyunji\n",
-      "jason.mun\n",
-      "jay.mini\n",
-      "jihoon.lee\n",
-      "jinhyun.b\n",
-      "kloud.on\n",
-      "robert.p\n",
-      "wookee3\n",
-      "woong.ssang\n",
-      "yang.kim\n",
-      "yejun\n",
-      "yoomin618\n",
+      "user_0\n",
+      "user_1\n",
+      "user_11\n",
+      "user_13\n",
+      "user_15\n",
+      "user_16\n",
+      "user_18\n",
+      "user_19\n",
+      "user_2\n",
+      "user_20\n",
+      "user_22\n",
+      "user_24\n",
+      "user_25\n",
+      "user_26\n",
+      "user_28\n",
+      "user_3\n",
+      "user_30\n",
+      "user_34\n",
+      "user_35\n",
+      "user_37\n",
+      "user_38\n",
+      "user_4\n",
+      "user_40\n",
+      "user_41\n",
+      "user_5\n",
+      "user_6\n",
+      "user_7\n",
+      "user_8\n",
+      "user_9\n",
       "score    0.726913\n",
       "dtype: float64 score    0.050892\n",
       "dtype: float64\n"
@@ -358,7 +414,6 @@
    "source": [
     "'''user agreement'''\n",
     "user_agree = {'user': [], 'score': []}\n",
-    "# for user in l_users:\n",
     "for user in l_filtered_users:    \n",
     "    print(user)\n",
     "    df_answer_person = df_result[df_result['user_id'] == user].sort_values('triplet_id')\n",
@@ -370,9 +425,6 @@
     "\n",
     "        answer = answer_cnt.loc[triplet_id]\n",
     "        o1, o2, o3, p, q = answer['o1'], answer['o2'], answer['o3'], answer['both'], answer['neither']\n",
-    "\n",
-    "#         o1, o2 = answer['o1'], answer['o2']\n",
-    "#         o3 = len(l_users) - o1 - o2\n",
     "\n",
     "        # requires more than two active votes for the triplet\n",
     "        if o1 + o2 < 2:\n",
@@ -388,10 +440,6 @@
     "            s = (0.5 * o1 + 0.5 * o2 + p - 1 ) / (o1 + o2 + p + q - 1)\n",
     "        else:\n",
     "            s = 0\n",
-    "#             s = (q - 1) / (o1 + o2 + p + 1 - 1)\n",
-    "        \n",
-    "\n",
-    "#         s = (o1 + o2 - 1) / (o1 + o2 + o3 - 1) * (oi - 1) / (o1 + o2 - 1)\n",
     "        \n",
     "\n",
     "        l_score.append(s)\n",
